--- a/css/auth.css
+++ b/css/auth.css
@@ -3,7 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+html,
+body {
+  overflow-x: hidden;
+}
 body {
   font-family: "Plus Jakarta Sans", "Noto Sans", sans-serif;
   background-color: #fafafa;
